test/expressions/complexOrderedCompareErrors.compare.good
complexOrderedCompareErrors.chpl:12: error: ordered comparison of complex numbers is not supported
